# wizardry-1-cht

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.zh.md  README.md  RELEASE_NOTES_v1.0.md
.github/workflows/: build-macos.yml  build.yml  pages.yml  sanity.yml
assets/audio/: .gitkeep  CREDITS.txt
assets/data/: extracted_strings.json  items.json  maze_b1.json  monsters.json  spells.json  wiz1_mazes.json
assets/fonts/: .gitkeep
assets/sprites/monsters_pcecd/: LICENSE.txt
docs/: A2_TITLE_EXTRACTION.md  ASSETS.md  CHANGELOG.md  DEV_HISTORY.md  I18N_TODO.md  ITEMS.md  LORE.md  MANUAL_GAP.md  MAPS.md  MONSTERS.md  REFERENCES.md  REVIEW.md  SPELLS.md  STRATEGY.md  TEST_REPORT.md  W6_PIC_FORMAT.md  WALKTHROUGH.md  _config.yml  index.md
src/: CMakeLists.txt  main.cpp
src/core/: arith.cpp  arith.h  character.cpp  character.h  combat.cpp  combat.h  item.cpp  item.h  maze.cpp  maze.h  monster.cpp  monster.h  rng.cpp  rng.h  rules.cpp  rules.h  spell.cpp  spell.h
src/data/: items_db.cpp  items_db.h  maze_db.cpp  maze_db.h
src/game/: camp.cpp  camp.h  class_change.cpp  class_change.h  help.cpp  help.h  inn.cpp  inn.h  intro.cpp  intro.h  roller.cpp  roller.h  screens.cpp  screens.h  shop.cpp  shop.h  state.cpp  state.h  tavern.cpp  tavern.h  traps.cpp  traps.h
src/i18n/: strings_zh_tw.json  tr.cpp  tr.h
src/render/: audio.cpp  audio.h  auto_map.cpp  auto_map.h  maze_view.cpp  maze_view.h  palette.cpp  palette.h  sprite.cpp  sprite.h  text.cpp  text.h  theme.cpp  theme.h  ui.cpp  ui.h  window.cpp  window.h
src/save/: gamesave.cpp  gamesave.h  roster.cpp  roster.h
tests/: CMakeLists.txt  test_arith.cpp  test_b1f_walk.cpp  test_camp_spells.cpp  test_character.cpp  test_class_change.cpp  test_combat.cpp  test_monster_db.cpp  test_rng.cpp  test_rules.cpp  test_save.cpp  test_special_attacks.cpp  test_spell_engine.cpp  test_spell_slots.cpp  test_v13_mechanics.cpp  wiz_test.h
tools/: analyze_w6_pic.py  build_4up_sprites.py  build_maze_walls.py  build_translation_template.py  ccd_to_cue.py  compose_ending_bg.py  compose_title_bg.py  embed_monster_sprites.py  extract_a2_title.py  extract_pcecd.sh  extract_strings.py  fetch_assets.sh  fetch_music.sh  fetch_pcecd_sprites.sh  fetch_sfx.sh  generate_themes.py  hgr_to_png.py  key_sprite_alpha.py  lz_decomp.py  make_theme_montage.py  qa_v124_part2.sh  qa_v124_part3.sh  qa_v124_part4.sh  qa_v124_part5.sh  qa_v124_part6.sh  qa_v124_part7.sh  qa_v124_playthrough.sh  record_playthrough.sh  regen_snapshots.sh  render_maze_svgs.py  seed_translations.py  snapshot_combat.cpp  snapshot_help.cpp  snapshot_intro.cpp  snapshot_party.cpp
