cmake_minimum_required(VERSION 3.16)
project(wizardry_cht CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
  add_compile_options(/W4 /utf-8)
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(SDL2 REQUIRED)
find_package(SDL2_ttf QUIET)
find_package(SDL2_image QUIET)
find_package(SDL2_mixer QUIET)
if(NOT SDL2_MIXER_LIBRARY)
  find_library(SDL2_MIXER_LIBRARY NAMES SDL2_mixer)
endif()
if(NOT SDL2_MIXER_INCLUDE_DIR)
  find_path(SDL2_MIXER_INCLUDE_DIR NAMES SDL_mixer.h PATH_SUFFIXES SDL2)
endif()

# Fallback for distros that ship pkg-config only (Ubuntu 22.04 etc.)
if(NOT TARGET SDL2_ttf::SDL2_ttf)
  find_library(SDL2_TTF_LIBRARY NAMES SDL2_ttf REQUIRED)
  find_path(SDL2_TTF_INCLUDE_DIR NAMES SDL_ttf.h PATH_SUFFIXES SDL2 REQUIRED)
endif()
if(NOT TARGET SDL2_image::SDL2_image)
  find_library(SDL2_IMAGE_LIBRARY NAMES SDL2_image)
  find_path(SDL2_IMAGE_INCLUDE_DIR NAMES SDL_image.h PATH_SUFFIXES SDL2)
endif()

find_package(nlohmann_json QUIET)

add_subdirectory(src)

option(BUILD_TESTS "Build unit tests" ON)
if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
